CSS fixes to make it work on Mobile

--- a/styles.css
+++ b/styles.css
@@ -423,7 +423,6 @@ i:hover {
 
   .body-sidebar-wrapper {
     flex-direction: column;
-    height: 100%;
   }
 
   .main-blog-content-wrapper {
